Добавление 1-го раздела и примененией к нему свойств.

--- a/index.html
+++ b/index.html
@@ -33,3 +33,44 @@
         </div>
     </header>
     <main>
+        <section class="banner">
+            <div class="cel">
+                <h1>Раскройте тайны звезд <br> с помощью <span>Celestia</span></h1>
+                <p>Мы проводим специальные мероприятия, такие как ночи наблюдения за звездами,<br> лекции и многое другое</p>
+                <button class="pod"><h3>Подробнее</h3></button>
+                <img class="plan" src="images/pl.png" alt="planet">
+            </div>
+            <div class="layout">
+                <div class="left-column">
+                    <div class="for">
+                        <h3 class="h32">для<br>парочек</h3>
+                        <p class="t2">ночи наблюдения<br>за звездами</p>
+                        <img class="cir" src="images/blue.png" alt="кружок">
+                    </div>
+                    <div class="disc">
+                        <h3 class="h32">20%</h3>
+                        <p class="t2">скидка пенсионерам</p>
+                        <img class="cir" src="images/white.png" alt="кружок">
+                    </div>
+                </div>
+                <div class="gul">
+                    <div class="log">
+                        <img src="images/da.png" alt="Онлайн-прогулка">
+                    </div>
+                    <div class="stats">
+                        <div class="stat-item">
+                            <h3>>50</h3>
+                            <p>залов</p>
+                        </div>
+                        <div class="stat-item center">
+                            <h3>>100</h3>
+                              <p>программ про <br>Вселенную </p>
+                        </div>
+                        <div class="stat-item">
+                            <h3>>20</h3>
+                            <p>телескопов</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
