Добавление раздела 'События'

--- a/index.html
+++ b/index.html
@@ -74,3 +74,128 @@
                 </div>
             </div>
         </section>
+        <section class="events">
+            <div class="container">
+                <div class="title-decoration">
+                    <img src="images/zv.png" alt="Декоративная звезда" class="title-icon">
+                    <h2 class="section-title">События</h2>
+                    <img src="images/zv.png" alt="Декоративная звезда" class="title-icon">
+                </div>
+                <div class="filters">
+                    <button class="filter-btn active">Программа</button>
+                    <button class="filter-btn">Мероприятия</button>
+                    <button class="filter-btn">Лекции</button>
+                </div>
+                <div class="event-card">
+                    <div class="image-wrapper">
+                        <img src="images/ab.png" alt="Звездное небо" class="event-image">
+                        <div class="event-badge"><img src="images/badge.png" alt="7+"></div>
+                    </div>
+                    <div class="action-column">
+                        <div>
+                            <div class="program-type">ПОЛНОКУПОЛЬНАЯ ПРОГРАММА</div>
+                            <h3 class="event-title">ПРОГУЛКА ПО ЗВЕЗДНОМУ НЕБУ</h3>
+                        </div>
+                    </div>
+                    <div class="action-column">
+                        <p class="event-description">
+                            Мы предлагаем вам прогуляться по самым ярким созвездиям северного полушария,
+                            насладиться петербургским звездным небом всех сезонов, полюбоваться Млечным
+                            Путем и, конечно, загадать заветное желание на "падающую" звезду
+                        </p>
+                        <div class="price-group">
+                            <div class="prices">
+                                <div class="price-item">
+                                    <img src="images/child.png" alt="Детский" class="price-icon">
+                                    <span class="price">400 ₽</span>
+                                </div>
+                                <div class="price-item">
+                                    <img src="images/adult.png" alt="Взрослый" class="price-icon">
+                                    <span class="price">600 ₽</span>
+                                </div>
+                            </div>
+                            <div class="buttons-group">
+                                <button class="btn date-btn">Выбрать дату</button>
+                                <button class="btn buy-btn">Купить билет</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="event-card">
+                    <div class="image-wrapper">
+                        <img src="images/2.png" alt="Солнечная система" class="event-image">
+                        <div class="event-badge"><img src="images/4+.png" alt="4+"></div>
+                    </div>
+                    <div class="action-column">
+                        <div>
+                            <div class="program-type">ДЕТСКАЯ ИНТЕРАКТИВНАЯ ПРОГРАММА</div>
+                            <h3 class="event-title">ПУТЕШЕСТВИЕ ПО СОЛНЕЧНОЙ СИСТЕМЕ</h3>
+                        </div>
+                    </div>
+                    <div class="action-column">
+                        <p class="event-description">
+                            Программа для самых юных посетителей, где можно весело и увлекательно<br>
+                            совершить экспедицию на космическом корабле к удивительным планетам. Узнаем<br>
+                            какая из планет самая большая, а какая ближе всего находится к Солнцу.
+                        </p>
+                        <div class="price-group">
+                            <div class="prices">
+                                <div class="price-item">
+                                    <img src="images/child.png" alt="Детский" class="price-icon">
+                                    <span class="price">400 ₽</span>
+                                </div>
+                                <div class="price-item">
+                                    <img src="images/adult.png" alt="Взрослый" class="price-icon">
+                                    <span class="price">600 ₽</span>
+                                </div>
+                            </div>
+                            <div class="buttons-group">
+                                <button class="btn date-btn">Выбрать дату</button>
+                                <button class="btn buy-btn">Купить билет</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="event-card">
+                    <div class="image-wrapper">
+                        <img src="images/3.png" alt="Мифы и легенды" class="event-image">
+                        <div class="event-badge"><img src="images/10+.png" alt="10+"></div>
+                    </div>
+                    <div class="action-column">
+                        <div>
+                            <div class="program-type">ПОЛНОКУПОЛЬНАЯ ПРОГРАММА</div>
+                            <h3 class="event-title">ТЕМНАЯ АСТРОНОМИЯ</h3>
+                        </div>
+                    </div>
+                    <div class="action-column">
+                        <p class="event-description">
+                            До появления науки как таковой, мы обращались к мифам. В программе «Мифы и<br>
+                            легенды забавного неба» мы узнаем, как люди древности использовали<br>
+                            мифологическое мышление <br>
+                            в попытках понять, каково место человека во Вселенной...
+                        </p>
+                        <div class="price-group">
+                            <div class="prices">
+                                <div class="price-item">
+                                    <img src="images/child.png" alt="Детский" class="price-icon">
+                                    <span class="price">400 ₽</span>
+                                </div>
+                                <div class="price-item">
+                                    <img src="images/adult.png" alt="Взрослый" class="price-icon">
+                                    <span class="price">600 ₽</span>
+                                </div>
+                            </div>
+                            <div class="buttons-group">
+                                <button class="btn date-btn">Выбрать дату</button>
+                                <button class="btn buy-btn">Купить билет</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="show-more">
+                    <button class="btn show-more-btn">
+                        Показать еще
+                    </button>
+                </div>
+            </div>
+        </section>
