Добавление блока с акциями и применение к нему стилей

--- a/index.html
+++ b/index.html
@@ -199,3 +199,39 @@
                 </div>
             </div>
         </section>
+        <section class="promo">
+            <h2><img class ="zv" src="images/zv.png" alt="звезда">Акции и скидки</h2>
+            <div class="promo-card-container">
+                <div class="promo-card">
+                    <img src="images/cos.png" alt="бабушка">
+                    <div class="promo-content">
+                        <div>
+                            <h3>Скидка <br>для пенсионеров</h3>
+                            <p>Все пенсионеры получат 20% скидку<br>на билет при посещении планетария</p>
+                        </div>
+                        <a class="promo-btn"><img src="images/str.png" alt="стрелка"></a>
+                    </div>
+                </div>
+                <div class="promo-card">
+                    <img src="images/dr.png" alt="день рождения">
+                    <div class="promo-content">
+                        <div>
+                            <h3>Пакет ко дню<br>рождения</h3>
+                            <p>В свой день рождения посетители<br>получают экскурсию по планетарию</p>
+                        </div>
+                        <a class="promo-btn"><img src="images/str.png" alt="стрелка"></a>
+                    </div>
+                </div>
+                <div class="promo-card">
+                    <img src="images/fam.png" alt="бабушка">
+                    <div class="promo-content">
+                        <div>
+                            <h3>Акция<br>"День семьи"</h3>
+                            <p>В воскресенье семьи с двумя детьми<br>получают карту звёздного неба</p>
+                        </div>
+                        <a class="promo-btn"><img src="images/str.png" alt="стрелка"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <img class="zvz" src="images/svg.png" alt="звёздочки">
