Добавление секции с отзывами

--- a/index.html
+++ b/index.html
@@ -235,3 +235,68 @@
             </div>
         </section>
         <img class="zvz" src="images/svg.png" alt="звёздочки">
+        <section class="otz">
+            <div class="header-container">
+                <h2>Отзывы и отметки</h2>
+               <div class="header-icons">
+                    <button class="header-icon-btn">
+                        <img src="images/icon1.png" alt="Иконка 1" class="header-icon">
+                    </button>
+                    <button class="header-icon-btn">
+                        <img src="images/icon2.png" alt="Иконка 2" class="header-icon">
+                    </button>
+                </div>
+            </div>
+            <div class="reviews-container">
+                <div class="review">
+                    <div class="decor-lines">
+                        <div class="line"></div><div class="line"></div><div class="line"></div>
+                        <div class="line"></div><div class="line"></div><div class="line"></div>
+                        <div class="line"></div><div class="line"></div><div class="line"></div>
+                        <div class="line"></div>
+                    </div>
+                    <img src="images/avatar-1.png" class="avatar" alt="Аватар">
+                    <div class="badge-1"><span>#планетарий</span></div>
+                    <div class="badge-stellarium" style="top: 335px; left: 127px;">
+                    <span>#stellarium</span>
+                    </div>
+                    <img src="images/icon-large.png" class="icon-large" style="top: 300px; left: 230px;" alt="Иконка">
+                    <img src="images/icon-small.png" class="icon-small" style="top: 288px; left: 215px;" alt="Иконка">
+                </div>
+                <div class="review">
+                    <img src="images/avatar-2.png" class="avatar" alt="Аватар Михаила">
+                    <h3 class="user-name">Михаил П.</h3>
+                    <p class="user-role">Фрилансер</p>
+                    <p class="review-text">
+                        Виды из телескопа были невероятными, а викторины для детей были веселыми и интересными.<br>
+                        Я настоятельно рекомендую планетарной всем, кто хочет почувствовать неизбываемое впечатление и познать немного про нашу вселенную!
+                    </p>
+                </div>
+                <div class="review">
+                    <div class="decor-lines">
+                        <div class="line"></div><div class="line"></div><div class="line"></div>
+                        <div class="line"></div><div class="line"></div><div class="line"></div>
+                        <div class="line"></div><div class="line"></div><div class="line"></div>
+                        <div class="line"></div>
+                    </div>
+                    <img src="images/avatar-3.png" class="avatar" alt="Аватар">
+                    <div class="badge-stellarium" style="top: 335px; left: 127px;">
+                        <span>#stellarium</span>
+                    </div>
+                    <div class="badge-caption">
+                        <span>Всем советую<br>посетить!</span>
+                    </div>
+                    <img src="images/icon-large.png" class="icon-large icon-large-card3" alt="Иконка">
+                    <img src="images/icon-small.png" class="icon-small icon-small-card3" alt="Иконка">
+                </div>
+                <div class="review">
+                    <img src="images/avatar-4.png" class="avatar" alt="Аватар Елены">
+                    <h3 class="user-name">Елена П.</h3>
+                    <p class="user-role">Домохозяйка</p>
+                    <p class="review-text">
+                        Мы пришли с детьми разного возраста, и все они были в восторге от того, что увидели.<br>
+                        Малыши с удовольствием изучали планеты и звезды, а также задавали вопросы остроносных, которые с радостью отвечали на них.
+                    </p>
+                </div>
+            </div>
+        </section>
