Добавление раздела с вопросами

--- a/index.html
+++ b/index.html
@@ -300,3 +300,24 @@
                 </div>
             </div>
         </section>
+        <section class="FAQ">
+            <h2>Часто задаваемые<br>вопросы</h2>
+            <div class="faq-item">
+                <div class="faq-question1">
+                    <h3>Какие выставки и события, посвященные космосу, проходят в планетарии?</h3>
+                    <span class="icon1">-</span>
+                </div>
+                <div class="faq-answer">
+                    <p>Выставка фотографий и изображений космических объектов, интерактивные демонстрации о нашей Солнечной системе, путешествия по галактикам и другим небесным темам. Также проводятся лекции и семинары о космической науке и астрономии, а иногда даже организуются ночные наблюдения за звездами.</p>
+                </div>
+                <div class="faq-question">
+                    <h3>Какие возможности есть для детей на выставках в планетарии?</h3>
+                    <span class="icon"></span>
+                </div>
+                <div class="faq-question">
+                    <h3>Какова стоимость посещения выставок и событий в планетарии?</h3>
+                    <span class="icon"></span>
+                </div>
+            </div>
+            <button class="faq-more">Показать еще</button>
+        </section>
