Добавление формы и подвала

--- a/index.html
+++ b/index.html
@@ -81,28 +81,33 @@
                     <h2 class="section-title">События</h2>
                     <img src="images/zv.png" alt="Декоративная звезда" class="title-icon">
                 </div>
+
                 <div class="filters">
                     <button class="filter-btn active">Программа</button>
                     <button class="filter-btn">Мероприятия</button>
                     <button class="filter-btn">Лекции</button>
                 </div>
+
                 <div class="event-card">
                     <div class="image-wrapper">
                         <img src="images/ab.png" alt="Звездное небо" class="event-image">
                         <div class="event-badge"><img src="images/badge.png" alt="7+"></div>
                     </div>
+
                     <div class="action-column">
                         <div>
                             <div class="program-type">ПОЛНОКУПОЛЬНАЯ ПРОГРАММА</div>
                             <h3 class="event-title">ПРОГУЛКА ПО ЗВЕЗДНОМУ НЕБУ</h3>
                         </div>
                     </div>
+
                     <div class="action-column">
                         <p class="event-description">
                             Мы предлагаем вам прогуляться по самым ярким созвездиям северного полушария,
                             насладиться петербургским звездным небом всех сезонов, полюбоваться Млечным
                             Путем и, конечно, загадать заветное желание на "падающую" звезду
                         </p>
+
                         <div class="price-group">
                             <div class="prices">
                                 <div class="price-item">
@@ -121,23 +126,27 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="event-card">
                     <div class="image-wrapper">
                         <img src="images/2.png" alt="Солнечная система" class="event-image">
                         <div class="event-badge"><img src="images/4+.png" alt="4+"></div>
                     </div>
+
                     <div class="action-column">
                         <div>
                             <div class="program-type">ДЕТСКАЯ ИНТЕРАКТИВНАЯ ПРОГРАММА</div>
                             <h3 class="event-title">ПУТЕШЕСТВИЕ ПО СОЛНЕЧНОЙ СИСТЕМЕ</h3>
                         </div>
                     </div>
+
                     <div class="action-column">
                         <p class="event-description">
                             Программа для самых юных посетителей, где можно весело и увлекательно<br>
                             совершить экспедицию на космическом корабле к удивительным планетам. Узнаем<br>
                             какая из планет самая большая, а какая ближе всего находится к Солнцу.
                         </p>
+
                         <div class="price-group">
                             <div class="prices">
                                 <div class="price-item">
@@ -156,17 +165,20 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="event-card">
                     <div class="image-wrapper">
                         <img src="images/3.png" alt="Мифы и легенды" class="event-image">
                         <div class="event-badge"><img src="images/10+.png" alt="10+"></div>
                     </div>
+
                     <div class="action-column">
                         <div>
                             <div class="program-type">ПОЛНОКУПОЛЬНАЯ ПРОГРАММА</div>
                             <h3 class="event-title">ТЕМНАЯ АСТРОНОМИЯ</h3>
                         </div>
                     </div>
+
                     <div class="action-column">
                         <p class="event-description">
                             До появления науки как таковой, мы обращались к мифам. В программе «Мифы и<br>
@@ -174,6 +186,7 @@
                             мифологическое мышление <br>
                             в попытках понять, каково место человека во Вселенной...
                         </p>
+
                         <div class="price-group">
                             <div class="prices">
                                 <div class="price-item">
@@ -192,6 +205,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="show-more">
                     <button class="btn show-more-btn">
                         Показать еще
@@ -247,6 +261,7 @@
                     </button>
                 </div>
             </div>
+
             <div class="reviews-container">
                 <div class="review">
                     <div class="decor-lines">
@@ -263,6 +278,7 @@
                     <img src="images/icon-large.png" class="icon-large" style="top: 300px; left: 230px;" alt="Иконка">
                     <img src="images/icon-small.png" class="icon-small" style="top: 288px; left: 215px;" alt="Иконка">
                 </div>
+
                 <div class="review">
                     <img src="images/avatar-2.png" class="avatar" alt="Аватар Михаила">
                     <h3 class="user-name">Михаил П.</h3>
@@ -272,6 +288,7 @@
                         Я настоятельно рекомендую планетарной всем, кто хочет почувствовать неизбываемое впечатление и познать немного про нашу вселенную!
                     </p>
                 </div>
+
                 <div class="review">
                     <div class="decor-lines">
                         <div class="line"></div><div class="line"></div><div class="line"></div>
@@ -289,6 +306,7 @@
                     <img src="images/icon-large.png" class="icon-large icon-large-card3" alt="Иконка">
                     <img src="images/icon-small.png" class="icon-small icon-small-card3" alt="Иконка">
                 </div>
+
                 <div class="review">
                     <img src="images/avatar-4.png" class="avatar" alt="Аватар Елены">
                     <h3 class="user-name">Елена П.</h3>
@@ -300,6 +318,7 @@
                 </div>
             </div>
         </section>
+
         <section class="FAQ">
             <h2>Часто задаваемые<br>вопросы</h2>
             <div class="faq-item">
@@ -319,5 +338,89 @@
                     <span class="icon"></span>
                 </div>
             </div>
+
             <button class="faq-more">Показать еще</button>
         </section>
+        <section class="reg">
+            <div class="main-title">
+                <h2>Ваш билет в космос —<br>быстрая запись на экскурсию</h2>
+            </div>
+
+            <div class="container">
+                <div class="form-content">
+                    <div>
+                        <p class="intro-text">Запишитесь на экскурсию в планетарий. Просто укажите ваше имя, электронную почту и дату, и мы свяжемся с вами для подтверждения</p>
+
+                        <form>
+                            <div class="form-group">
+                                <input type="text" placeholder="Введите ваше имя" required>
+                            </div>
+
+                            <div class="form-group">
+                                <input type="tel" placeholder="Номер телефона" required>
+                            </div>
+
+                            <div class="form-group">
+                                <input type="text" placeholder="Дата посещения" required>
+                            </div>
+                        </form>
+                    </div>
+
+                    <div>
+                        <button type="submit">Отправить</button>
+                        <p class="privacy-text">*Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности.</p>
+                    </div>
+                </div>
+
+                <div class="image-section">
+                    <img src="images/space-ticket.png" alt="Космический корабль">
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="kak">
+        <h2>Как нас найти?</h2>
+        <div class="subtract-image">
+                <img src="images/Subtract.png" alt="Декор">
+            </div>
+
+            <img src="images/map-image.png" alt="Карта расположения" class="map-image">
+
+            <div class="contact-row">
+            <div class="address-block">
+                <img src="images/pin-icon.png" alt="Иконка метки" class="address-icon">
+                <div class="address">
+                    <p>Екатеринбург, ул. Маршала Жукова, дом 12</p>
+                </div>
+            </div>
+
+            <div class="center-icons">
+                <img src="images/icon11.png" alt="Иконка 1" class="center-icon">
+                <img src="images/icon22.png" alt="Иконка 2" class="center-icon">
+                <img src="images/icon33.png" alt="Иконка 3" class="center-icon">
+            </div>
+
+            <div class="right-block">
+                <img src="images/wh.png" alt="Телефон" class="social-icon">
+                <img src="images/tg.png" alt="Почта" class="social-icon">
+                <span class="phone">+7 (812) 336 36 36</span>
+            </div>
+        </div>
+
+        <div class="footer-grid-wrapper">
+            <div class="privacy-policy">
+                <p>Политика конфиденциальности</p>
+            </div>
+
+            <section class="newsletter-section">
+                <h3 class="newsletter-title">Подписаться<br>на рассылку</h3>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Электронная почта" class="newsletter-input">
+                </form>
+                <button class="newsletter-button">Подписаться</button>
+            </section>
+        </div>
+    </footer>
+
+</body>
+</html>
