--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                     <div class="action-column">
                         <p class="event-description">
-                            Мы предлагаем вам прогуляться по самым ярким созвездиям северного полушария,
+                            Мы предлагаем вам прогуляться по самым ярким созвездиям северного полушария,
                             насладиться петербургским звездным небом всех сезонов, полюбоваться Млечным
                             Путем и, конечно, загадать заветное желание на "падающую" звезду
                         </p>
@@ -181,10 +181,7 @@
 
                     <div class="action-column">
                         <p class="event-description">
-                            До появления науки как таковой, мы обращались к мифам. В программе «Мифы и<br>
-                            легенды забавного неба» мы узнаем, как люди древности использовали<br>
-                            мифологическое мышление <br>
-                            в попытках понять, каково место человека во Вселенной...
+                            До появления науки как таковой, мы обращались к мифам. В программе «Мифы и<br>легенды забавного неба» мы узнаем, как люди древности использовали<br>мифологическое мышление <br>в попытках понять, каково место человека во Вселенной...
                         </p>
 
                         <div class="price-group">
